--- a/public/gadgets/dataInquirer.html
+++ b/public/gadgets/dataInquirer.html
@@ -34,7 +34,7 @@ var catalogs = ["sdss"];
 // Status Icons
 var ICON_URL_SELECTED = '/images/targetYellow.png';
 var ICON_URL_DEFAULT = '/images/target.png';
-var ICON_URL_SPINNER = '/images/spinnerGrey.gif';
+var ICON_URL_SPINNER = '/images/spinnerSmallWhite.gif';
 var ICON_URL_ERROR = '/images/errorIcon.gif';
 var ICON_URL_SUCCESS = '/images/successIcon.gif';
 
@@ -93,7 +93,8 @@ var createDataSet = function() {
   var query = $("#txtQueryString").val(); 
   var dataSource = $("#selectCatalog option:selected").text();
 
-  var createDataSetSuccess = function(newDataSet) {
+  var createDataSetSuccess = function(newDataSetId) {
+    var newDataSet = gadget.dashboard.getDataSet(newDataSetId);
     var numberOfRows = newDataSet.length();
     if (numberOfRows === 0) {
       // the special case answer is that no rows were returned
@@ -125,7 +126,7 @@ var createDataSet = function() {
   showStatus(ICON_URL_SPINNER, "Getting objects..."); 
   //$('textarea#txtQueryString').val(newQuery.query);
   //$('input[name=dataSetName]').val(newQuery.dataSet);
-  gadget.dashboard.createDataSet(dataSetName, dataSource, query, createDataSetSuccess);
+  gadget.dashboard.createDataSet(dataSetName, dataSource, query, createDataSetSuccess, function() {}, true);
   
 };
 
@@ -201,7 +202,9 @@ function populateSelect(selectName, options) {
 	<div id="divQueryBox" style="width:100%; margin-top: 10px;">
 		Query String: 
 		<br/> 
-		<textarea id="txtQueryString" rows="5" style="width:99%;"></textarea>
+    <div>
+		  <textarea id="txtQueryString" rows="5" style="width: 100%"></textarea>
+    </div>
 		<br/>
 		<input id="btGetData" onclick="createDataSet();" type="button" value="Submit"/> 
 		<input type="button" value="LSST Query" onclick="makeSQLRequest();"> 
