--- a/public/gadgets/nameResolver.html
+++ b/public/gadgets/nameResolver.html
@@ -24,7 +24,7 @@
 // Status Icons
 var ICON_URL_SELECTED = '/images/targetYellow.png';
 var ICON_URL_DEFAULT = '/images/target.png';
-var ICON_URL_SPINNER = '/images/spinnerGrey.gif';
+var ICON_URL_SPINNER = '/images/spinnerSmallWhite.gif';
 var ICON_URL_ERROR = '/images/errorIcon.gif';
 var ICON_URL_SUCCESS = '/images/successIcon.gif';
 
